<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/text_URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:inputType="textUri"
        android:ems="2"
        android:text="@string/link_baidu" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/parent_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameL_show"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textview_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="25"
                android:scrollbars="vertical"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbarFadeDuration="1000"
                android:overScrollMode="ifContentScrolls"
                android:text="@string/action_subtitle" />



            <ImageView
                android:id="@+id/imagview_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_content"
                android:layout_gravity="center" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_visit_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/button_explore" />
        <Button
            android:id="@+id/btn_download_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/btn_visit_web"
            android:layout_toEndOf="@id/btn_visit_web"
            android:text="@string/button_download"/>

    </RelativeLayout>
     
 
</LinearLayout>