<!--<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:rowCount="4" android:columnCount="4" android:id="@+id/root"    >-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:logo="@mipmap/icon"
        android:subtitle="@string/action_subtitle"></android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbChat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/tab_selector_weixin"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/tab_taxRefund"
            android:textColor="@color/tab_selector_tv_color" />

        <RadioButton
            android:id="@+id/rbAddress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_tongxunlu"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/tab_period"
            android:textColor="@color/tab_selector_tv_color" />

        <RadioButton
            android:id="@+id/rbFind"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_faxian"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/tab_undefined"
            android:textColor="@color/tab_selector_tv_color" />

        <RadioButton
            android:id="@+id/rbMe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_wo"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/tab_self"
            android:textColor="@color/tab_selector_tv_color" />
    </RadioGroup>
</LinearLayout><!--</GridLayout>-->

    <!--
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    -->
